<resources>
    <string name="app_name">NikeShop</string>

    <string name="nav_home">خانه</string>
    <string name="cart">سبد خرید</string>
    <string name="nav_profile">پروفایل</string>
    <string name="nav_basket">سبد خرید</string>
    <string name="latest">جدیدترین ها</string>
    <string name="viewAll">مشاهده همه</string>
    <string name="commnets">نظرات کاربران</string>
    <string name="insertComment">ثبت نظر</string>
    <string name="viewAllcomments">مشاهده همه نظرات</string>
    <string name="productList">لیست محصولات</string>
    <string name="sort">مرتب سازی</string>
    <string name="sortLatest">جدیدترین</string>
    <string name="sortPopular">پربازدیدترین</string>
    <string name="sortPriceHTL">گران ترین</string>
    <string name="sortPriceLTH">ارزان ترین</string>
    <string name="addToCart">افزودن به سبد خرید</string>
    <string name="unknownError">خطای نامشخص</string>
    <string name="successAddToCart">به سبد خرید اضافه شد</string>
    <array name="sort">
        <item>@string/sortLatest</item>
        <item>@string/sortPopular</item>
        <item>@string/sortPriceHTL</item>
        <item>@string/sortPriceLTH</item>
    </array>

    <string name="loginScreenTitle">ورود به حساب کاربری</string>
    <string name="email">ایمیل</string>
    <string name="password">رمز عبور</string>
    <string name="loginTitle">ورود</string>
    <string name="signUpHint">حساب کاربری ندارید</string>
    <string name="singUp">ثبت نام</string>
    <string name="authHint">ایمیل و رمز عبور خود را وارد کنید</string>
    <string name="signUpScreenTitle">ایجاد حساب کاربری</string>
    <string name="loginHint">قبلا ثبت نام کردید؟</string>
    <string name="login">ورود به حساب</string>

    <string name="pay">پرداخت</string>
    <string name="count">تعداد</string>
    <string name="removeFromCart">حذف از سبد خرید</string>
    <string name="purchaseDetail">جزییات خرید</string>
    <string name="totalPrice">مبلغ کل خرید</string>
    <string name="shippingCost">هزینه ارسال</string>
    <string name="payablePrice">مبلغ قابل پرداخت</string>

    <string name="cartEmptyStateLoginRequired">وارد حساب کاربری خود شوید</string>
    <string name="cartEmptyStateCallToAction">ورود به حساب کاربری</string>
    <string name="cartEmptyState">هیچ خبری اینجا نیست!</string>

    <string name="shippingToolbarTitle">انتخاب تحویل گیرنده و شیوه پرداخت</string>
    <string name="onlinePayment">پرداخت اینترنتی</string>
    <string name="cashOnDelivery">پرداخت در منزل</string>

    <string name="firstName">نام</string>
    <string name="lastName">نام خانوادگی</string>
    <string name="postalCode">کد پستی</string>
    <string name="phoneNumber">شماه موبایل</string>
    <string name="address">آدرس</string>

    <string name="checkoutToolbarTitle">رسید پرداخت</string>
    <string name="returnHome">بازگشت به ضفحه اصلی</string>
    <string name="orderHistory">سوابق سفارش</string>

    <string name="purchaseStatus">وضعیت سفارش</string>
    <string name="price">مبلغ</string>




</resources>