<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.shipping.ShippingActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <com.example.nikeshop.view.NikeToolBar
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:nt_toolbar="@string/shippingToolbarTitle"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:paddingBottom="32dp"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstNameEtl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ShippingTextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstNameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ShippingTextInputEditText"
                    android:text="سعید"
                    android:hint="@string/firstName"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastNameEtl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ShippingTextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastNameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ShippingTextInputEditText"
                    android:text="قدیری"
                    android:hint="@string/lastName"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/postalCodeEtl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ShippingTextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/postalCodeEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ShippingTextInputEditText"
                    android:text="1111111111"
                    android:hint="@string/postalCode"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNumberEtl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ShippingTextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNumberEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ShippingTextInputEditText"
                    android:text="09111111111"
                    android:hint="@string/phoneNumber"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addressEtl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ShippingTextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addressEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ShippingTextInputEditText"
                    android:text="شیراز اصفهان تهران تبریز مشهد بندر عباس"
                    android:hint="@string/address"/>
            </com.google.android.material.textfield.TextInputLayout>

            <include
                android:id="@+id/purchaseDetailView"
                layout="@layout/item_purchase_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/codeBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_marginEnd="8dp"
                    android:text="@string/cashOnDelivery"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/onlinePaymentBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/onlinePayment"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>