<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.product.ProductDetailActivity">

    <com.example.nikeshop.view.scroll.ObservableScrollView
        android:id="@+id/observableScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="100dp"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.example.nikeshop.view.NikeImageView
                    android:id="@+id/productIvDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:viewAspectRatio="1.3"/>

            </FrameLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/productTitleDetail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textAppearance="?textAppearanceHeadline6"
                    app:layout_constraintEnd_toStartOf="@+id/previousPriceDetail"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="نام محصول" />

                <TextView
                    android:id="@+id/previousPriceDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:textAppearance="@style/TextAppearance.MyTheme.Body2"
                    android:textColor="?android:textColorSecondary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:maxLines="1"
                    tools:text="125000تومان" />

                <TextView
                    android:id="@+id/currentPriceDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    app:layout_constraintEnd_toEndOf="@+id/previousPriceDetail"
                    app:layout_constraintTop_toBottomOf="@+id/previousPriceDetail"
                    tools:text="110000 تومان" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:layout_margin="6dp"
                android:text="این کتونی شدیدا برای دویدن و راه رفتن مناسب هست و تقریبا. هیچ فشار مخربی رو نمیذارد به پا و زانوان شما انتقال داده شود" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?textAppearanceHeadline6"
                    android:textColor="?android:textColorSecondary"
                    android:text="@string/commnets"
                    android:layout_gravity="center_vertical|start"/>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:text="@string/insertComment"/>

            </FrameLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/commentRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:clipToPadding="false"
                android:background="@drawable/background_comment"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/viewAllBtn"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/viewAllcomments"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

        </LinearLayout>
    </com.example.nikeshop.view.scroll.ObservableScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:translationZ="5dp">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="16dp"
            app:srcCompat="@drawable/ic_back"/>

        <ImageView
            android:id="@+id/favoriteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="16dp"
            app:srcCompat="@drawable/ic_favorites_24dp"/>

    </FrameLayout>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/toolbarView"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:cardElevation="4dp"
            app:cardCornerRadius="0dp"
            android:alpha="0">

            <TextView
                android:id="@+id/toolbarTitleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?textAppearanceHeadline6"
                tools:text="نام محصول"
                android:layout_marginStart="48dp"
                android:layout_gravity="center_vertical|start"/>


        </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/addToCartBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/addToCart"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>